syntax = "proto2";
option java_multiple_files = true;

package ticktrack.proto;

enum UserRole {
    Admin = 1;
    BusinessUser = 2;
    RegularUser = 3;
}

//SUPPORTING MESSAGES
message CommonResponse {
    required string responseText = 1;
}
//SUPPORTING MESSAGES END

//LOGIN MESSAGE
message Login {
    required int64 time = 1;
    required string username = 2;
    required string password = 3;
}
//LOGIN MESSAGE END

//USER OPERATIONS
message UserOp {
    required int64 time = 1;
    required string sender = 2;
    oneof msg {
        UserOpCreateRequest userOpCreateRequest = 11;
        CommonResponse userOpCommonResponse = 12;
        UserOpUpdateRequest userOpUpdateRequest = 13;
        UserOpChangePassword userOpChangePassword = 14;
        UserOpChangeRole userOpChangeRole = 15;
        UserOpDeactivateRequest userOpDeactivate = 16;
        UserOpGetRequest userOpGet = 17;
        UserOpGetByCriteriaRequest userOpGetByCriteria = 18;
        UserOpGetResponse userOpGetResponse = 19;
    }

    message UserOpCreateRequest {
        required string username = 1;
        required string firstname = 2;
        required string lastname = 3;
        required string email = 4;
        required string password = 5;
        required UserRole role = 6;
    }

    message UserOpUpdateRequest {
        required string username = 1;

        enum ParameterName {
            FirstName = 1;
            LastName = 2;
            Email = 3;
        }

        required ParameterName paramName = 2;
        required string value = 3;
    }

    message UserOpChangePassword {
        required string username = 1;
        required string oldPassword = 2;
        required string newPassword = 3;
    }

    message UserOpChangeRole {
        required string username = 1;
        required UserRole newRole = 2;
    }

    message UserOpDeactivateRequest {
        required string username = 1;
    }

    message UserOpGetRequest {
        required string username = 1;
    }

    message UserOpGetByCriteriaRequest {
        enum GetCriteria {
            Admin = 1;
            BusinessUser = 2;
            RegularUser = 3;
            All = 4;
        }
    }

    message UserOpGetResponse {
        repeated UserInfo userInfo = 1;

        message UserInfo {
            required string username = 1;
            required string firstname = 2;
            required string lastname = 3;
            required string email = 4;
            required UserRole role = 6;
            required bool deactivated = 7;
            optional string group = 8;
        }
    }

}
//USER OPERATIONS END

//USER GROUP OPERATIONS
message UserGroupOp {
    required int64 time = 1;
    required string sender = 2;

    oneof msg {
        UserGroupOpRequest userGroupOpCreateRequest = 11;
        UserGroupOpUpdateRequest userGroupOpUpdateRequest = 12;
        UserGroupOpGetAllRequest userGroupOpGetAllRequest = 13;
        UserGroupOpGetAllResponse userGroupOpGetAllResponse = 14;
        CommonResponse commonResponse = 15;
    }

    message UserGroupOpRequest {
        enum OpType {
            Create = 1;
            Delete = 2;
        }

        required OpType opType = 1;
        required string groupName = 2;
    }

    message UserGroupOpUpdateRequest {
        required string oldName = 1;
        required string newName = 2;
    }

    message UserGroupOpGetAllRequest {
    }

    message UserGroupOpGetAllResponse {
        repeated string groupName = 1;
    }
}
//USER GROUP OPERATIONS END